Fixed spacing

--- a/site/causes-stylesheet.css
+++ b/site/causes-stylesheet.css
@@ -23,7 +23,7 @@ div{
 	position:relative;
 	top:18px;
 	background:grey;
-	text-align: justify;
+	
 }
 nav{
 	display: inline;
