--- a/site/diagnosis-stylesheet.css
+++ b/site/diagnosis-stylesheet.css
@@ -74,8 +74,6 @@ div{
 	     1px 1px 0 #000;
 	position:relative;
 	background:grey;
-	text-align: justify;
-	word-spacing: -.01em;
 }
 h1{
 	font-size:4em;
