--- a/site/treatment-stylesheet.css
+++ b/site/treatment-stylesheet.css
@@ -36,12 +36,10 @@ div{
 	    1px -1px 0 #000,
 	    -1px 1px 0 #000,
 	     1px 1px 0 #000;
-	position:relative;
 	background:grey;
-	text-align: justify;
-
+	text-indent: 1em;
 }
-
+/*
 p{
 font-family: sans-serif;
 margin-left: 200px;
@@ -61,7 +59,7 @@ text-shadow:
 		 background:grey;
 		 text-align: justify;
 		 text-indent: 50px;
-}
+}*/
 .sub-heading{
 	text-decoration:underline;
 	text-align:center;
@@ -90,6 +88,7 @@ ul{
 	font-family: sans-serif;
 	font-size: .9em;
 	line-height: 1.3em;
+	text-indent: 1em;
 }
 
 h1{
